Carryover from 1.33 branch

--- a/localisation/X_l_english.yml
+++ b/localisation/X_l_english.yml
@@ -7,6 +7,8 @@
  X_estate_cossacks_privilege_1_desc:0 ""
  X_estate_cossacks_privilege_2:0 "Hire Cossack Raiders"
  X_estate_cossacks_privilege_2_desc:0 ""
+ X_estate_burghers_privilege_1:0 "Organized Slave Markets"
+ X_estate_burghers_privilege_1_desc:0 ""
  #Tooltips
  X_estate_cossacks_privilege_1_on_granted_tt:0 "Every owned province of §lFlatland§! terrain in the §YRuthenia§! region or §YSteppes§! terrain with a §YFort§! gains '§YCossack Border Defense§!', giving the following effects:\nLocal Defensiveness: §G+20.0%§!"
  X_estate_cossacks_privilege_1_on_revoked_tt:0 "Remove '§YCossack Border Defense§!' from every owned province of §lFlatland§! terrain in the §YRuthenia§! region or §YSteppes§! terrain with a §YFort§!."
@@ -14,12 +16,16 @@
  X_estate_cossacks_privilege_2_on_revoked_tt:0 "Cossack raiders will no longer raid our Heathen neighbors."
  X_cossack_raid_tt:0 "The §Y[x_estate_cossacks_privilege_2_country_event_target.GetAdjective]§! Cossacks looted §Y[Root.X_cossack_raid_total_development_localization_variable.GetValue]§!¤ from our treasury."
  X_cossack_raid_tt2:0 "[From.GetXCossackLootAmountTT]"
+ X_estate_burghers_privilege_1_on_granted_tt:0 "Every owned province producing §YSlaves§! gains '§YKhan's Savga§!', giving the following effects:\nLocal Production Efficiency: §G+75.0%§!"
+ X_estate_burghers_privilege_1_on_revoked_tt:0 "Remove '§YKhan's Savga§!' from every owned province producing §YSlaves§!."
  #Modifiers
  X_estate_cossacks_privilege_1_pmod:0 "Cossack Border Defense"
  desc_X_estate_cossacks_privilege_1_pmod:0 ""
  X_estate_cossacks_privilege_2_pmod:0 "Cossack Raid"
  desc_X_estate_cossacks_privilege_2_pmod:0 ""
  X_estate_cossacks_sponsored_raid_lmod:0 "Sponsored Raid"
+ X_estate_burghers_privilege_1_pmod:0 "Khan's Savga"
+ desc_X_estate_burghers_privilege_1_pmod:0 ""
  #Events
  X_cossack_raid_loot_amount_zero:0 "A poor plunder"
  X_cossack_raid_loot_amount_not_zero:0 "A plentiful plunder"
@@ -215,14 +221,14 @@
  X_CRI_decree_1:0 "Promote Urbanization"
  X_CRI_decree_1_title:0 "Promote Urbanization"
  X_CRI_decree_1_desc:0 ""
- X_CRI_decree_2:0 "Sponsor Slave Raids"
- X_CRI_decree_2_title:0 "Sponsor Slave Raids"
+ X_CRI_decree_2:0 "Sponsor Çapuls"
+ X_CRI_decree_2_title:0 "Sponsor Çapuls"
  X_CRI_decree_2_desc:0 ""
  X_CRI_decree_3:0 "Patronize Tatar Literature"
  X_CRI_decree_3_title:0 "Patronize Tatar Literature"
  X_CRI_decree_3_desc:0 ""
- X_CRI_decree_4:0 "Issue Yarliq"
- X_CRI_decree_4_title:0 "Issue Yarliq"
+ X_CRI_decree_4:0 "Issue Yarlig"
+ X_CRI_decree_4_title:0 "Issue Yarlig"
  X_CRI_decree_4_desc:0 ""
  X_CRI_decree_5:0 "Expand the Steppe"
  X_CRI_decree_5_title:0 "Expand the Steppe"
@@ -272,6 +278,8 @@
  X_CRI_reform_8_emperor:0 "Unite the Tatars"
  X_CRI_reform_8_desc:0 ""
  X_CRI_reform_8_tt:0 "§WCountry changes to §Y[GLH.GetName]§!.\nIf we own §Y[466.GetName]§!, then §Y[466.GetName]§! will become the new Capital.\nIf our Government Rank is less than §YEmpire§!, the Government Rank of §Y[GLH.GetName]§! changes to §YEmpire§!.\nThe event '§YNew Traditions & Ambitions§!' happens.\n§Y[GLH.GetName]§! gains a permanent claim on all §YTatar§! provinces.§!"
+ #Reform tooltips
+ X_CRI_reform_1_passed_tt:0 "§YReinforce Genghisid Rule§! Khanate Reform has been enacted."
  #Event Modifiers
  X_CRI_reform_3_pmod:0 "Steppes Development"
  desc_X_CRI_reform_3_pmod:0 ""
@@ -287,6 +295,16 @@
  desc_X_CRI_exacted_tribute_cmod:0 ""
  X_CRI_qaraylar_craftsmen_pmod:0 "Qaraylar Craftsmen"
  desc_X_CRI_qaraylar_craftsmen_pmod:0 ""
+ X_CRI_trench_gate_pmod:0 "Trench Gate"
+ desc_X_CRI_trench_gate_pmod:0 ""
+ X_CRI_gateway_protected_pmod:0 "Gateway Protected"
+ desc_X_CRI_gateway_protected_pmod:0 ""
+ X_CRI_rights_of_the_khan_cmod:0 "Rights of the Khan"
+ desc_X_CRI_rights_of_the_khan_cmod:0 ""
+ X_estate_nomadic_tribes_privilege_1_pmod:0 "Khan's Savga"
+ desc_X_estate_nomadic_tribes_privilege_1_pmod:0 ""
+ #Modifier tooltips
+ X_CRI_gateway_protected_tt:0 "until §YOr Qapi§! is successfully sieged"
  #Estate Modifiers
  X_CRI_estate_dhimmi_cufut_qale_lmod:0 "Çufut Qale"
  #Casus Belli
@@ -325,8 +343,21 @@
  X_CRI_mission_3_desc:0 ""
  X_CRI_mission_4_title:0 "Last Vestige"
  X_CRI_mission_4_desc:0 ""
+ X_CRI_mission_5_title:0 "The Golden Gate"
+ X_CRI_mission_5_desc:0 ""
+ X_CRI_mission_6_title:0 "Port of [6001.GetName]"
+ X_CRI_mission_6_desc:0 ""
+ X_CRI_mission_7_title:0 "Cuma Cami"
+ X_CRI_mission_7_desc:0 ""
+ X_CRI_mission_8_title:0 "Crimean Slave Trade"
+ X_CRI_mission_8_desc:0 ""
+ X_CRI_mission_9_title:0 "Throne of the Crimea"
+ X_CRI_mission_9_desc:0 ""
  #Mission Tooltips
  X_CRI_mission_3_tt:0 "Event '§YGenoa Cedes Gazaria§!' has happened."
+ X_CRI_mission_7_tt:0 "If this mission is completed by having the required relations with §Y[TUR.GetName]§!, you lose half the money."
+ X_CRI_mission_8_tt:0 "All provinces in the §YCrimea§! trade node are owned by §Y[Root.GetName]§!."
+ X_CRI_mission_9_tt:0 "Every owned province in the §Y[284.GetRegionName]§! gains §G1§! Base Tax and Base Manpower.\nEvery owned province NOT of §Y[Root.Culture.GetGroupName]§! culture will become §Y[Root.Culture.GetName]§!."
  #Events
  X_CRI_events.1.t:0 "Tatar Yoke Crushed"
  X_CRI_events.1.d1:0 ""
@@ -356,7 +387,7 @@
  #Event Tooltips
  X_CRI_event_2_tt:0 "§Y[Root.GetName]§! gains a permanent claim on all §YTatar§! provinces.§!"
  X_CRI_event_6_tt:0 "Upon being built, we gain §G+5.0§!£X_imperial_mandate£.\nIf §Y[284.GetName]§! has a §YGreat Mosque§!, gain §Y4§! Base Tax in §Y[284.GetName]§!.\nElse gain a §YGreat Mosque§! in §Y[284.GetName]§!."
- X_CRI_event_8_tt:0 "We shall pay §Y[GEN.X_gazaria_total_development_localization_variable.GetValue]§!¤ to §Y[GEN.GetName]§! for control of their possesions in the §YPontic Steppe§!."
+ X_CRI_event_8_tt:0 "We shall pay §Y[GEN.X_gazaria_total_development_localization_variable.GetValue]§!¤ to §Y[GEN.GetName]§! for control of their possesions in the §Y[284.GetRegionName]§!."
  X_CRI_event_8_tt2:0 "Peacefully resolving our border tensions with §Y[GEN.GetName]§! will result in the §Y[GEN.GetAdjective]§! commercial colony of §Y[286.GetCapitalName]§! to become a center of trade in §Y[286.GetName]§!."
  #Diplomatic Actions
  X_declarewar_diplomatic_actions_tt:0 "§RYou cannot declare on a tributary of a nation, if you are already at war with that nation.§!"
