Unused provinces no longer show in error log, some 1.34 error log fixes

--- a/localisation/EU4_l_english.yml
+++ b/localisation/EU4_l_english.yml
@@ -355,15 +355,15 @@
  PRESTIGE_FROM_CONV:0 "This increases our prestige by §G+$VAL$§!."
  KARMA_FROM_CONV:1 "This increases our Karma by §G+$VAL$§!."
  KARMA_FROM_CONV_CONFIRM:0 "Converting this province will increase our Karma by §G+$VAL$§!."
- CAN_TRANSFER_VASSAL_WARGOAL:1 "Allows '§YTransfer Subject§!' Peace Treaty at half cost"
- CAN_CHAIN_CLAIM:0 "Allow Claims Bordering Claims"
- FREE_MAINTENANCE_ON_EXPL_CONQ:0 "No Maintenance on Exploring Leaders"
- CAN_COLONY_BOOST_DEVELOPMENT:1 "+1 Tax, +1 Production and +1 Manpower when Colony Finished"
- ATTACK_BONUS_IN_CAPITAL_TERRAIN:1 "+1 Combat Bonus in Terrain of Capital"
- ATTACK_BONUS_IN_CAPITAL_TERRAIN_IN_PROV:1 "§G+1 Combat Bonus§! for us due to same terrain as in our Capital"
- CAN_BYPASS_FORTS:0 "Ignore Zone of Control"
- IGNORE_CORING_DISTANCE:0 "Ignore Coring Distance"
- FORCE_MARCH_FREE:0 "Force March costs no Power"
+ MODIFIER_CAN_TRANSFER_VASSAL_WARGOAL:1 "Allows '§YTransfer Subject§!' Peace Treaty at half cost"
+ MODIFIER_CAN_CHAIN_CLAIM:0 "Allow Claims Bordering Claims"
+ MODIFIER_FREE_MAINTENANCE_ON_EXPL_CONQ:0 "No Maintenance on Exploring Leaders"
+ MODIFIER_CAN_COLONY_BOOST_DEVELOPMENT:1 "+1 Tax, +1 Production and +1 Manpower when Colony Finished"
+ MODIFIER_ATTACK_BONUS_IN_CAPITAL_TERRAIN:3 "Combat Bonus in Terrain of Capital: §G+1§!"
+ MODIFIER_ATTACK_BONUS_IN_CAPITAL_TERRAIN_IN_PROV:1 "§G+1 Combat Bonus§! for us due to same terrain as in our Capital"
+ MODIFIER_CAN_BYPASS_FORTS:0 "Ignore Zone of Control"
+ MODIFIER_IGNORE_CORING_DISTANCE:0 "Ignore Coring Distance"
+ MODIFIER_FORCE_MARCH_FREE:0 "Force March costs no Power"
  SPLENDOR_MONTHLY_GAIN:0 "You gain $VAL$ splendor each month due to:\n"
  ADD_AGE_AB_NOT_ENOUGH_SPLENDOR:0 "You need more splendor, as it costs $NEED|Y$ to purchase, and you only have $CURR|Y$."
  AGE_STARTS_WHEN:0 "This age starts when\n$HOW$\nhas been true for at least $MONTHS|Y$ months."
