--- a/localisation/X_l_english.yml
+++ b/localisation/X_l_english.yml
@@ -845,3 +845,7 @@
  desc_X_mande_culture_tier_10_cmod:0 "[GetXMandeCultureEffect]"
  X_mande_culture_full_control_cmod:0 "Mande Unity"
  desc_X_mande_culture_full_control_cmod:0 "[GetXMandeCultureEffect]"
+ ####################
+ # Error Log Fixes
+ ####################
+ X_unused_provinces_area:0 ""
