--- a/localisation/tmm_l_english.yml
+++ b/localisation/tmm_l_english.yml
@@ -1612,3 +1612,113 @@
  CENTRALIZE_STATE_NOPOWER:0 "You don't have enough Administrative Power to Centralize State. You need $POWER_COST|Y$£adm and have $POWER_AVAILABLE|Y$£adm available."
  EXPAND_INFRASTRUCTURE_NOPOWER:0 "You don't have enough Administrative Power to Expand Infrastructure. You need $POWER_COST|Y$£adm and have $POWER_AVAILABLE|Y$£adm available."
  EXPAND_INFRASTRUCTURE_COST_TOOLTIP:0 "Expand your Province's infrastructure for $POWER_COST|Y$£adm."
+ NO_REORGANISE_UNIT_EMBARKED:0 "You can only reorganize when none of the units are embarked."
+ TRADE_FAVORS_FOR_HEIR_CANNOT_MAMLUK:0 "§Y$COUNTRY$§! have a foreign slave government."
+ GO_BANKRUPT_EFFECT:0 "$COUNTRY|Y$ go Bankrupt"
+ IS_FOREIGN_CLAIM:0 "Is a permanent claim of a foreign country"
+ IS_NOT_FOREIGN_CLAIM:0 "Is NOT a permanent claim of a foreign country"
+ GIVES_MILITARY_ACCESS_TRIGGER:0 "Gives Military Access to $COUNTRY|Y$"
+ NOT_GIVES_MILITARY_ACCESS_TRIGGER:0 "Does NOT give Military Access to $COUNTRY|Y$"
+ RECEIVES_MILITARY_ACCESS_TRIGGER:0 "Receives Military Access from $COUNTRY|Y$"
+ NOT_RECEIVES_MILITARY_ACCESS_TRIGGER:0 "Does NOT receive Military Access from $COUNTRY|Y$"
+ GIVES_FLEET_ACCESS_TRIGGER:0 "Gives Fleet Basing Rights to $COUNTRY|Y$"
+ NOT_GIVES_FLEET_ACCESS_TRIGGER:0 "Does NOT give Fleet Basing Rights to $COUNTRY|Y$"
+ RECEIVES_FLEET_ACCESS_TRIGGER:0 "Receives Fleet Basing Rights from $COUNTRY|Y$"
+ NOT_RECEIVES_FLEET_ACCESS_TRIGGER:0 "Does NOT receive Fleet Basing Rights from $COUNTRY|Y$"
+ IS_BLOCKADED_BY_TRIGGER:0 "Is blockaded by $COUNTRY|Y$"
+ NOT_IS_BLOCKADED_BY_TRIGGER:0 "Is NOT blockaded by $COUNTRY|Y$"
+ AT_WAR_COUNTRY_STARTS:0 "Country currently at War with"
+ ALL_AT_WAR_COUNTRY_STARTS:0 "All Countries currently at War with"
+ ANY_CAPITAL_PROVINCE_STARTS:0 "Any Capital Province"
+ NOT_ANY_CAPITAL_PROVINCE_STARTS:0 "No Capital Province"
+ ALL_CAPITAL_PROVINCE_STARTS:0 "All Capital provinces"
+ ANY_CLAIMED_PROVINCE_STARTS:0 "Any claimed province"
+ NO_ANY_CLAIMED_PROVINCE_STARTS:0 "No claimed province"
+ ALL_CLAIMED_PROVINCE_STARTS:0 "All claimed provinces"
+ EVERY_CLAIMED_PROV:0 "Every claimed Province"
+ MODIFIER_NATIONAL_FOCUS_COOLDOWN_YEARS:0 "Change National Focus Cooldown Years"
+ diplomatic_reputation:0 "Diplomatic Reputation"
+ tolerance_own:0 "Tolerance of the True Faith"
+ tolerance_heretic:0 "Tolerance of Heretics"
+ tolerance_heathen:0 "Tolerance of Heathens"
+ num_accepted_cultures:0 "Number of accepted Cultures"
+ ruler_adm:0 "Ruler Administrative ability"
+ ruler_dip:0 "Ruler Diplomatic ability"
+ ruler_mil:0 "Ruler Military ability"
+ heir_adm:0 "Heir Administrative ability"
+ heir_dip:0 "Heir Diplomatic ability"
+ heir_mil:0 "Heir Military ability"
+ consort_adm:0 "Consort Administrative ability"
+ consort_dip:0 "Consort Diplomatic ability"
+ consort_mil:0 "Consort Military ability"
+ MODIFIER_TRANSPORT_ATTRITION:0 "Attrition when loaded on Ships"
+ MAPMODE_PIRACY:0 "Piracy"
+ MAPMODE_PIRACY_DESC:0 "Displays which Provinces are within raiding range, and which have been raided recently."
+ CAN_RAID:0 "$PROVINCE$ can be raided"
+ CANNOT_RAID:0 "$PROVINCE$ cannot be raided"
+ SLAVERAID_NOT_A_COASTAL_PROVINCE:0 "$PROVINCE$ is not a coastal Province."
+ SLAVERAID_NOT_COLONIZED:0 "$PROVINCE$ is not colonized."
+ SLAVERAID_YOURS:0 "$PROVINCE$ is your Province."
+ SLAVERAID_SEA:0 "$PROVINCE$ is at sea."
+ MODIFIER_LOCAL_GARRISON_SIZE:0 "Local Garrison Size"
+ MODIFIER_LOCAL_FORT_MAINTENANCE_MODIFIER:0 "Local Fort Maintenance"
+ MODIFIER_LOCAL_CENTER_OF_TRADE_UPGRADE_COST:0 "Local Center of Trade Upgrade Cost"
+ YEARLY_SAILORS_FROM_PROVINCES:0 "Gain $FACTOR|+$ Sailors from provinces:\n$TRIGGER_DESC$"
+ YEARLY_SAILORS_FROM_PROVINCES_CUSTOM:0 "Gain $FACTOR|+$ Sailors $DESC$\n"
+ YEARLY_MANPOWER_FROM_PROVINCES:0 "Gain $FACTOR|+$ Manpower from provinces:\n$TRIGGER_DESC$"
+ YEARLY_MANPOWER_FROM_PROVINCES_CUSTOM:0 "Gain $FACTOR|+$ Manpower $DESC$\n"
+ MODIFIER_DISEMBARK_SPEED:0 "Disembark Time"
+ MODIFIER_REGIMENT_MANPOWER_USAGE:0 "Regiment Manpower Usage"
+ HORDE_RAZE_TOOLTIP_ONLY_DIFFERENT_RELIGION:0 "Only Heathen or Heretic provinces can be razed."
+ INVITETOHRETITLE:0 "Invite to Empire"
+ INVITETOHREDESC:0 "Ask if $THEY$ would like to join the Empire led by $LEADER$."
+ INVITE_TO_HRE_REQDESC:0 "$ACTOR$ is asking us to join the Empire. Do we seek to join?"
+ HRE_DESIRE_OPINION_OF_EMPEROR:0 "Opinion of Emperor: "
+ HRE_DESIRE_DISMANTLED:0 "Empire has already been dismantled: "
+ HRE_DESIRE_ALREADY_MEMBER:0 "Already a member: "
+ HRE_DESIRE_GOVERNMENT_RANK_LOSS:0 "Government Rank loss on joining: "
+ HRE_DESIRE_IN_LINE_TO_SUCCEED:0 "In line to succeed to be the next Emperor: "
+ HRE_DESIRE_TOO_HOLY:0 "Too Holy for this nonsense: "
+ HRE_DESIRE_DOESNT_WANT_TO_SUBMIT:0 "Doesn't want to submit to the Emperor: "
+ HRE_DESIRE_OVERLORD_IS_EMPEROR:0 "Overlord is Emperor: "
+ HRE_DESIRE_DIFFERENT_RELIGION:0 "Different Religion: "
+ HRE_DESIRE_GENERAL_INERTIA:1 "Base: "
+ HRE_DESIRE_NEED_PROTECTION:0 "Need protecting from $COUNTRY$: "
+ HRE_DESIRE_DOESNT_NEED_THE_PROTECTION:0 "Doesn't need protecting from their main threat ($COUNTRY$): "
+ MODIFIER_ALL_ESTATE_INFLUENCE_MODIFIER:0 "All Estates Influence Modifier"
+ MODIFIER_MAX_HOSTILE_ATTRITION:0 "Max Hostile Attrition"
+ MODIFIER_MORALE_DAMAGE:0 "Morale Damage"
+ MODIFIER_DEVELOPMENT_COST_MODIFIER:0 "Development Cost Modifier"
+ MODIFIER_LOCAL_DEVELOPMENT_COST_MODIFIER:0 "Local Development Cost Modifier"
+ EFFECT_GAIN_BAD_BOY:1 "$WHOWITH|Y$ will gain $AMOUNT|R$ aggressive expansion against $BADBOY|Y$."
+ EFFECT_LOSE_BAD_BOY:1 "$WHOWITH|Y$ will lose $AMOUNT|G$ aggressive expansion against $BADBOY|Y$."
+ RESET_GOLDEN_AGE:0 "Cancels any existing or previous Golden Age, allowing a new one"
+ EXTEND_GOLDEN_AGE:0 "Extends current Golden Age by $MONTHS$ months"
+ MODIFIER_ALLOW_FREE_ESTATE_PRIVILEGE_REVOCATION:0 "Allow Estate Privileges to be revoked regardless of Loyalty and Influence"
+ IS_HEGEMON_OF_TYPE_TRIGGER:0 "Is $TYPE$"
+ IS_NOT_HEGEMON_OF_TYPE_TRIGGER:0 "Is NOT $TYPE$"
+ REMOVE_HEGEMONY:0 "Removes Hegemony"
+ OWES_AT_LEAST_FAVORS:0 "Owes $WHO$ at least $VALUE$ favors"
+ NOT_OWES_AT_LEAST_FAVORS:0 "Owes $WHO$ less than $VALUE$ favors"
+ DECOLONIZE_EFFECT:0 "$PROVINCE$ is decolonized"
+ HAS_NAVAL_DOCTRINE_OF_TYPE:0 "Has the $NAME$ Naval Doctrine"
+ NOT_HAS_NAVAL_DOCTRINE_OF_TYPE:0 "Does NOT have the $NAME$ Naval Doctrine"
+ HAS_NAVAL_DOCTRINE:0 "Has a Naval Doctrine"
+ NOT_HAS_NAVAL_DOCTRINE:0 "Does NOT have a Naval Doctrine"
+ MODIFIER_MONTHLY_KARMA_ACCELERATOR:0 "Monthly Karma Accelerator"
+ MODIFIER_MONTHLY_CHURCH_POWER:0 "Monthly Faith Power"
+ MODIFIER_LOCAL_TRADE_COMPANY_INVESTMENT_COST:0 "Local Trade Company Investment Cost"
+ MODIFIER_GLOBAL_DEFENDER_DICE_ROLL_BONUS:0 "Global Defender Dice Roll Bonus"
+ MODIFIER_LOCAL_DEFENDER_DICE_ROLL_BONUS:0 "Local Defender Dice Roll Bonus"
+ MODIFIER_GLOBAL_ATTACKER_DICE_ROLL_BONUS:0 "Global Attacker Dice Roll Bonus"
+ MODIFIER_LOCAL_ATTACKER_DICE_ROLL_BONUS:0 "Local Attacker Dice Roll Bonus"
+ MODIFIER_OWN_TERRITORY_DICE_ROLL_BONUS:0 "Own Territory Dice Roll Bonus"
+ ONLY_RELIGIOUS_MODIFIER:0 "§YThis modifier gets removed when the state religion changes.§!"
+ MODIFIER_MAY_NON_RELIGION:1 "Heretic and heathen provinces do not give any penalties"
+ MODIFIER_GLOBAL_ALLOWED_NUM_OF_BUILDINGS:0 "Global Possible Number of Buildings"
+ COT_REGION_MODIFIER:0 "§YOwned provinces in Region§!:\n$MODIFIER$\n"
+ COMBAT_NAVY_DICE_BONUS:0 "Navy being close to your own coast effect on the dice roll."
+ COMBAT_DICE_BONUS:0 "Dice roll bonus."
+ COMBAT_OWN_TERRITORY_BONUS:0 "Dice roll bonus in your own territory."
+ ESTATE_LED_REGENCY_HAS_NOT_INFLUENCE:0 "Reigning Estate has less than $VALUE$ Loyalty"
+ MODIFIER_ALLOW_CLIENT_STATES:0 "Can create §YClient States§!"
