--- a/localisation/cossacks_l_english.yml
+++ b/localisation/cossacks_l_english.yml
@@ -144,7 +144,7 @@
  EST_VAL_RELIGIOUS_MINORITY:0 "Religious Minorities: §Y$VAL$%§!"
  EST_VAL_PROVINCES:1 "Controlled Provinces: §Y$VAL$%§! (§Y$REAL_VAL$%§! before cap)"
  EST_VAL_BASE:1 "Base: $VAL|Y1$§Y%§!"
- EST_VAL_ALLIANCE_ON_VC:1 "Alliance With $NAME$: §R$VAL|1$%§!"
+ EST_VAL_ALLIANCE_ON_VC:2 "Victory Card in Allied territory ($NAME$): §R$VAL|1$%§!"
  EST_VAL_DEV:1 "Land Share: $VAL|Y1$§Y%§!"
  EST_VAL_LOW_TRADE_INCOME:0 "Low Trade Income: §Y$VAL$%§!"
  EST_VAL_HIGH_TRADE_INCOME:0 "High Trade Income: §Y$VAL$%§!"
@@ -172,6 +172,8 @@
  ESTATE_LOYALTY_TOOLTIP_DELAYED:3 "An Estate's loyalty determines its country-wide effects. As long as it is at least $THRESHOLD|Y2&$ they will benefit you but if they drop below that threshold they will become disloyal and instead penalize you. The strength of these effects depends on their level of influence."
  ESTATE_INFLUENCE_TOOLTIP:2 "The $ESTATE|Y$ have an influence level of $INFLUENCE$ due to:"
  ESTATE_INFLUENCE_TOOLTIP_DELAYED:0 "An Estate's influence is the power they wield in the country. A high level of influence will increase both the benefits provided by a loyal Estate and the penalties suffered from a disloyal one. An Estate whose influence increases to more than $DANGER|Y$ is at risk of seizing power in the nation."
+ PRIVILEGES_COUNT:0 "$NUM$ / $MAX$"
+ PRIVILEGES_COUNT_DESC:0 "Each estate can have at most $MAX$ privileges."
  PROVINCE_GRANT_ESTATE_TOOLTIP:1 "Grant $PROVINCE|Y$ to the $ESTATE|Y$."
  PROVINCE_GRANT_ESTATE_TOOLTIP_2:0 "It will have the following effects in the province:"
  PROVINCE_GRANT_ESTATE_TOOLTIP_3:0 "§RBecause their loyalty will still be below $AMT|Y$, this will have the following effects in the province:§!"
@@ -273,11 +275,11 @@
  HORDE_RAZE_TOOLTIP_NO_POWER:0 "§RWe will currently not get any power from razing due to:\n$MODIFIERDESC$§!"
  HORDE_RAZE_TOOLTIP_LATER:0 "If we raze $NAME|Y$ at a later time, we will gain §G$ADM$§! £adm, §G$DIP$§! £dip, §G$MIL$§! £mil and §G$LOOT$§!¤ of loot, as well as $UNITY$ Horde Unity."
  CONFIRM_RAZE_TITLE:0 "Confirm Raze Province"
- HORDE_RAZE_TOOLTIP_ONLY_NON_CORES:0 "§ROnly non-core provinces that you own and control can be razed.§!"
- HORDE_RAZE_TOOLTIP_MIN_DEVELOPMENT:0 "§RThis province cannot be razed because its Development is too low.§!"
- HORDE_RAZE_TOOLTIP_COOLDOWN:0 "§RThis province cannot be razed again until §Y$DATE$§!.§!"
- HORDE_RAZE_TOOLTIP_UNDER_SIEGE:0 "§RProvinces cannot be razed while under siege.§!"
- HORDE_RAZE_TOOLTIP_COLONY:0 "§RCan't raze a province that you have colonized.§!"
+ HORDE_RAZE_TOOLTIP_ONLY_NON_CORES:1 "Only non-core provinces that you own and control can be razed."
+ HORDE_RAZE_TOOLTIP_MIN_DEVELOPMENT:1 "This province cannot be razed because its Development is too low."
+ HORDE_RAZE_TOOLTIP_COOLDOWN:1 "This province cannot be razed again until §Y$DATE$§!."
+ HORDE_RAZE_TOOLTIP_UNDER_SIEGE:1 "Provinces cannot be razed while under siege."
+ HORDE_RAZE_TOOLTIP_COLONY:1 "Can't raze a province that you have colonized."
  NO_SECONDARY_RELIGION:0 "No Syncretic Faith"
  CONVERT_TO_NO_SECONDARY:0 "Choose to have no Syncretic Faith"
  SECONDARY_RELIGION_NAME:0 "Syncretic Faith: §Y$NAME$§!"
