--- a/localisation/text_l_english.yml
+++ b/localisation/text_l_english.yml
@@ -2731,7 +2731,7 @@
  CELESTIAL_MANDATE:0 "Legacy" #X
  CELESTIAL_DECISIONS:0 "Khanate Reforms"
  CELESTIAL_TRIBUTARIES:0 "$NUM$ Tributaries"
- CELESTIAL_DECREES:0 "Decrees"
+ CELESTIAL_DECREES:0 "Labels" #X
  CELESTIAL_CLOSE:0 "Close"
  CELESTIAL_EMPIRE:0 "Tradition of the Steppe"
  PAPACY_CARDINALS:0 "Cardinals:"
@@ -7624,7 +7624,7 @@
  CELESTIAL_DECISION_MINIMUM_TO_ENACT:0 "Need a minimum of $MINVALUE|Y$ Legacy to take this Decision." #X
  CELESTIAL_DECISION_NOT_ENOUGH_MANDATE:0 "This Decision costs $MANDATECOST|Y$ Legacy, but you only have $CURRENTMANDATE|Y$ Legacy." #X
  CELESTIAL_DECISION_NOT_ENOUGH_STABILITY:0 "You may not enact this reform at the moment as your country is too disorganized. This Decision costs $STABILITYCOST|Y$ Stability, and you cannot go lower than $MINIMUMSTABILITY|Y$!"
- CELESTIAL_DECISION_NOT_EMPEROR:0 "Must be the §YGreat Khan§! to enact Celestial Reforms." #X
+ CELESTIAL_DECISION_NOT_EMPEROR:0 "Must be the §YGreat Khan§! to enact Khanate Reforms." #X
  CURRENT_CELESTIAL_EMPEROR:0 "$RULERNAME|Y$ is the current Great Khan." #X
  CELESTIAL_EMPIRE_NO_EMPEROR:0 "The Tradition of the Steppe has not proclaimed a worthly ruler."
  IMPERIAL_MANDATE_DESC:0 "The Legacy value represents the authority of the current Great Khan. According to the Tradition of the Steppe, only those of Genghisid royal descent could claim a right to rule. Legacy can be used to enact Khanate Reforms to reform the Tradition of the Steppe." #X
