Error fixes, localization fixes

--- a/localisation/X_l_english.yml
+++ b/localisation/X_l_english.yml
@@ -267,8 +267,8 @@
  X_CRI_reform_5_title:0 "Institute Qadiliq System"
  X_CRI_reform_5_emperor:0 "Institute Qadiliq System"
  X_CRI_reform_5_desc:0 ""
- X_CRI_reform_6:0 "Appease the Mufti"
- X_CRI_reform_6_title:0 "Appease the Mufti"
+ X_CRI_reform_6:0 "Appease the Qadi Esker"
+ X_CRI_reform_6_title:0 "Appease the Qadi Esker"
  X_CRI_reform_6_desc:0 ""
  X_CRI_reform_6_tt:0 "§WEvery owned province of §YChristian§! faith gains '§YKharaj§!', giving the following effects:\nLocal Tax Modifier: §G+33.0%§!§!"
  X_CRI_reform_6_tt2:0 "Remove '§YKharaj§!' from every owned province of §YChristian§! faith."
