--- a/localisation/tmm_l_english.yml
+++ b/localisation/tmm_l_english.yml
@@ -1415,6 +1415,23 @@
  CAWA_REGIMENT_TYPE:0 "Tercio"
  ONLY_CAWA_MODIFIER:0 "§YAffects only Tercio Regiments§!"
  CREATECAWA:0 "Conscript Tercio"
+ CAROLEAN_NAME:0 "$HOME$'s $NUM$$ORDER$ Carolean"
+ MODIFIER_HAS_CAROLEAN:0 "Allows Carolean Infantry"
+ MODIFIER_LOCAL_HAS_CAROLEAN:0 "Province Allows Carolean Infantry"
+ CAROLEAN_CANT_HAVE:0 "Your nation cannot raise Carolean Infantry."
+ CAROLEAN_FORCELIMIT:0 "We can recruit up to $VAL|%Y$ of our total Carolean Culture Provinces' development of $DEV$ as §GCarolean Infantry§! due to:"
+ CAROLEAN_LIMIT_CULTURE:0 "$PROVINCE$ is a $CULTURE$ province, so can not recruit Carolean Infantry here."
+ CAROLEAN_DESC:2 "The Carolean are the Swedish and Finnish infantry of the Swedish Empire. Recruited from the peasantry, the Carolean go under strict training and are renowned to invoke fear in the hearts of their enemies.\nCarolean regiments can only be recruited in owned provinces of §YSwedish§! or §YFinnish§! culture, and the amount of possible units depends on the development of these provinces."
+ REGCAT_carolean:0 "Carolean"
+ ADD_CAROLEAN_SUB_UNIT_EFFECT:0 "Get '§GCarolean Infantry§!' $UNIT$ in $WHERE|Y$."
+ CAROLEAN_REGIMENT:0 "Carolean Regiment\n$EFFECT$"
+ HAVE_LESS_CAROLEAN_THAN:0 "Have less Carolean Regiments than $VALUE|Y$.\n"
+ HAVE_AT_LEAST_CAROLEAN_THAN:0 "Have at least $VALUE|Y$ Carolean Regiments.\n"
+ MODIFIER_AMOUNT_OF_CAROLEAN:0 "Possible Carolean Infantry"
+ MODIFIER_LOCAL_AMOUNT_OF_CAROLEAN:0 "Possible Carolean Infantry"
+ ONLY_CAROLEAN_MODIFIER:0 "§YAffects only Carolean Regiments§!"
+ MODIFIER_MORALE_DAMAGE_RECIEVED:0 "Morale Damage Received"
+ CAROLEAN_REGIMENT_TYPE:0 "Carolean"
  STATE_CAWA_CREATED_REGIMENTS:0 "This will cost $MILAMOUNT|Y$ £mil£, and $NUM|Y$ Tercio will spawn in $PROV|Y$.\nDo you want to create a Tercio regiment?"
  CAWA_FROM_TT:0 "§YTercio Forcelimit§!\nThis is the amount of current and possible Tercio our nation can have.\n\nTercio are raised from the state's full core provinces.\n\n$NAME$ provide $AMOUNT|Y$ Force Limit of Tercio due to the development in:\n"
  CHANGE_CULTURE_CANNOT_GOV_REFORMS:0 "Your Government Reforms prevent changing your Primary Culture."
