--- a/localisation/X_l_english.yml
+++ b/localisation/X_l_english.yml
@@ -10,7 +10,7 @@
  X_estate_burghers_privilege_1:0 "Organized Slave Markets"
  X_estate_burghers_privilege_1_desc:0 ""
  #Tooltips
- X_estate_cossacks_privilege_1_on_granted_tt:0 "Every owned province of §lFlatland§! terrain in the §YRuthenia§! region or §YSteppes§! terrain with a §YFort§! gains '§YCossack Border Defense§!', giving the following effects:\nLocal Defensiveness: §G+20.0%§!"
+ X_estate_cossacks_privilege_1_on_granted_tt:0 "Every owned province of §lFlatland§! terrain in the §YRuthenia§! region or §YSteppes§! terrain with a §YFort§! gains '§YCossack Border Defense§!', giving the following effects:\nLocal Defensiveness: §G+15.0%§!\nLocal Garrison Size: §G+50.0%§!\nLocal Fort Maintenance: §G-75.0%§!"
  X_estate_cossacks_privilege_1_on_revoked_tt:0 "Remove '§YCossack Border Defense§!' from every owned province of §lFlatland§! terrain in the §YRuthenia§! region or §YSteppes§! terrain with a §YFort§!."
  X_estate_cossacks_privilege_2_on_granted_tt:0 "Cossack raiders will sporadically raid our Heathen neighbors, plundering their wealth."
  X_estate_cossacks_privilege_2_on_revoked_tt:0 "Cossack raiders will no longer raid our Heathen neighbors."
@@ -230,8 +230,8 @@
  X_CRI_decree_3:0 "Patronize Tatar Literature"
  X_CRI_decree_3_title:0 "Patronize Tatar Literature"
  X_CRI_decree_3_desc:0 ""
- X_CRI_decree_4:0 "Issue Yarlig"
- X_CRI_decree_4_title:0 "Issue Yarlig"
+ X_CRI_decree_4:0 "Train Basqaqs"
+ X_CRI_decree_4_title:0 "Train Basqaqs"
  X_CRI_decree_4_desc:0 ""
  X_CRI_decree_5:0 "Expand the Steppe"
  X_CRI_decree_5_title:0 "Expand the Steppe"
@@ -257,7 +257,7 @@
  X_CRI_reform_3:0 "Enhance Development"
  X_CRI_reform_3_title:0 "Enhance Development"
  X_CRI_reform_3_desc:0 ""
- X_CRI_reform_3_tt:0 "§WEvery owned province of §YSteppes§! terrain gains '§YSteppes Development§!', giving the following effects:\nLocal Development Cost: §G-10.0%§!§!"
+ X_CRI_reform_3_tt:0 "§WEvery owned province of §YSteppes§! terrain gains '§YSteppes Development§!', giving the following effects:\nLocal Development Cost: §G-5.0%§!§!"
  X_CRI_reform_3_tt2:0 "Remove '§YSteppes Development§!' from every owned §YSteppes§! province."
  X_CRI_reform_4:0 "Organize Gerege Filing"
  X_CRI_reform_4_title:0 "Organize Gerege Filing"
