Heavy cavalry regiments re enabled

--- a/localisation/EU4_l_english.yml
+++ b/localisation/EU4_l_english.yml
@@ -42,12 +42,12 @@
  REGCAT_mercenary:0 "Mercenaries"
  REGCAT_banner:0 "Banners"
  REGCAT_streltsy:0 "Streltsy"
- REGCAT_cossacks:0 "Sipahi"
+ REGCAT_cossacks:0 "Heavy Cavalry"
  REGCAT_janissaries:0 "Janissaries"
  REGCAT_rajput:0 "Rajput"
- COSSACKS_NAME:0 "$HOME$'s $NUM$$ORDER$ Sipahi Cavalry"
+ COSSACKS_NAME:0 "$HOME$'s $NUM$$ORDER$ Heavy Cavalry"
  RAJPUT_NAME:0 "$HOME$'s $NUM$$ORDER$ Rajputs"
- COSSACKS_REGIMENT:0 "Sipahi Regiment\nShock Damage Bonus: $VAL$"
+ COSSACKS_REGIMENT:0 "Heavy Cavalry Regiment\nShock Damage Bonus: $VAL$"
  STRELTSY_NAME:0 "$HOME$'s $NUM$$ORDER$ Streltsy Regiment"
  STRELTSY_REGIMENT:0 "Streltsy Regiment\nFire Damage Bonus: $VAL$"
  streltsy_modifier:0 "Reliance on Streltsy"
