--- a/localisation/gecko_modifiers_l_english.yml
+++ b/localisation/gecko_modifiers_l_english.yml
@@ -228,6 +228,7 @@ increased_merc_quality:0 "Increased Mercenary Quality"
 Over_merc_limit:0 "Over Mercenary Forcelimit"
 streltsy_buff:0 "Streltsy Expanded"
 sipahi_buff:0 "Timariot System Expanded"
+mamluk_buff:0 "Invested in the Mamluks"
 #venice
 
 gc_ven_urban_renewal:0 "Urban Renewal"
