--- a/localisation/tmm_l_english.yml
+++ b/localisation/tmm_l_english.yml
@@ -1446,7 +1446,7 @@
  ONLY_MARINE_MODIFIER:0 "§YAffects only Marine Regiments§!"
  ONLY_BANNER_MODIFIER:0 "§YAffects only Banner Regiments§!"
  ONLY_STRELTSY_MODIFIER:0 "§YAffects only Streltsy Regiments§!"
- ONLY_COSSACK_MODIFIER:0 "§YAffects only Sipahi Regiments§!"
+ ONLY_COSSACK_MODIFIER:0 "§YAffects only Heavy Cavalry Regiments§!"
  TRADE_NODE_VALUE_AT_LEAST:0 "Trade Node value in $TRADENODE$ is at least $NUMBER$"
  TRADE_NODE_VALUE_LESS_THAN:0 "Trade Node value in $TRADENODE$ is less than $NUMBER$"
  brown_noser:0 "Paid a Great Power at least 10k¤"
