--- a/localisation/text_l_english.yml
+++ b/localisation/text_l_english.yml
@@ -340,7 +340,7 @@
  romanian:0 "Romanian"
  russian:0 "Muscovite"
  ruthenian:0 "Ruthenian"
- sapmi:0 "Sami"
+ sapmi:0 "Sámi"
  saxon:0 "Saxon"
  scandinavian:0 "Nordic"
  schlesian:0 "Silesian"
