--- a/localisation/X_l_english.yml
+++ b/localisation/X_l_english.yml
@@ -1,5 +1,10 @@
 ﻿l_english:
  ####################
+ # Map Changes
+ ####################
+ PROV6213:0 "Karasu"
+ PROV6213_ADJ:0 "Karasu"
+ ####################
  # Estates
  ####################
  #Privileges
