Gecko Crimean missions removed. Start of custom mission tree.

--- a/localisation/X_l_english.yml
+++ b/localisation/X_l_english.yml
@@ -363,11 +363,28 @@
  X_CRI_mission_8_desc:0 ""
  X_CRI_mission_9_title:0 "Throne of the Crimea"
  X_CRI_mission_9_desc:0 ""
+ X_CRI_mission_10_title:0 "Control the Murava Trail"
+ X_CRI_mission_10_desc:0 ""
+ X_CRI_mission_11_title:0 "Great Raid of Moscow"
+ X_CRI_mission_11_desc:0 ""
+ X_CRI_mission_12_title:0 "Conquer the Wild Fields"
+ X_CRI_mission_12_desc:0 ""
+ X_CRI_mission_13_title:0 "Control the Dniepr"
+ X_CRI_mission_13_desc:0 ""
+ X_CRI_mission_14_title:0 "Ruthenian Claim"
+ X_CRI_mission_14_desc:0 ""
+ X_CRI_mission_15_title:0 "Crush the Cossacks"
+ X_CRI_mission_15_desc:0 ""
+ X_CRI_mission_16_title:0 "Avenge the Great Troubles"
+ X_CRI_mission_16_desc:0 ""
+ X_CRI_mission_17_title:0 "Ravage Poland"
+ X_CRI_mission_17_desc:0 ""
  #Mission Tooltips
  X_CRI_mission_3_tt:0 "Event '§YGenoa Cedes Gazaria§!' has happened."
  X_CRI_mission_7_tt:0 "If this mission is completed by having the required relations with §Y[TUR.GetName]§!, you lose half the money."
  X_CRI_mission_8_tt:0 "All provinces in the §YCrimea§! trade node are owned by §Y[Root.GetName]§!."
  X_CRI_mission_9_tt:0 "Every owned province in the §Y[284.GetRegionName]§! gains §G1§! Base Tax and Base Manpower.\nEvery owned province NOT of §Y[Root.Culture.GetGroupName]§! culture will become §Y[Root.Culture.GetName]§!."
+ X_CRI_mission_12_tt:0 " provinces in the §Y[282.GetAreaName]§! area, §Y[1974.GetAreaName]§! area, §Y[283.GetAreaName]§! area, §Y[281.GetAreaName]§! area, §Y[280.GetAreaName]§! area, §Y[290.GetAreaName]§! area, and §Y[289.GetAreaName]§! area owned by §Y[Root.GetName]§! or its Subjects."
  #Events
  X_CRI_events.1.t:0 "Tatar Yoke Crushed"
  X_CRI_events.1.d1:0 ""
