Cossack localization fixed.

--- a/localisation/EU4_l_english.yml
+++ b/localisation/EU4_l_english.yml
@@ -47,9 +47,9 @@
  REGCAT_rajput:0 "Rajput"
  COSSACKS_NAME:0 "$HOME$'s $NUM$$ORDER$ Heavy Cavalry"
  RAJPUT_NAME:0 "$HOME$'s $NUM$$ORDER$ Rajputs"
- COSSACKS_REGIMENT:0 "Heavy Cavalry Regiment\nShock Damage Bonus: $VAL$"
+ COSSACKS_REGIMENT:0 "Heavy Cavalry Regiment\n$EFFECT$"
  STRELTSY_NAME:0 "$HOME$'s $NUM$$ORDER$ Streltsy Regiment"
- STRELTSY_REGIMENT:0 "Streltsy Regiment\nFire Damage Bonus: $VAL$"
+ STRELTSY_REGIMENT:1 "Streltsy Regiment\n$EFFECT$"
  streltsy_modifier:0 "Reliance on Streltsy"
  cossacks_modifier:0 "Combined Arms"
  SIBERIAN_FRONTIER_LACKS_IDEA:0 "Without a national idea, it's impossible to establish a Siberian frontier."
