--- a/localisation/gecko_trade_l_english.yml
+++ b/localisation/gecko_trade_l_english.yml
@@ -19,7 +19,7 @@
  cape_of_good_hope:0 "Cape of Good Hope"
  constantinople:0 "Anatolia"
  novgorod:0 "Moscow"
- astrakhan:0 "Atrakhan"
+ astrakhan:0 "Astrakhan"
  siberia:0 "Siberia"
  kiev:0 "Kiev"
  laplata:0 "Rio de La Plata"
