--- a/localisation/X_l_english.yml
+++ b/localisation/X_l_english.yml
@@ -321,6 +321,8 @@
  desc_X_CRI_through_the_zasechnaya_cherta_cmod:0 ""
  X_CRI_end_of_the_cossacks_cmod:0 "End of the Cossacks"
  desc_X_CRI_end_of_the_cossacks_cmod:0 ""
+ X_CRI_ruthenian_dominance_cmod:0 "Ruthenian Dominance"
+ desc_X_CRI_ruthenian_dominance_cmod:0 ""
  #Modifier tooltips
  X_CRI_gateway_protected_tt:0 "until §YOr Qapi§! is successfully sieged"
  #Estate Modifiers
@@ -385,8 +387,6 @@
  X_CRI_mission_15_desc:0 ""
  X_CRI_mission_16_title:0 "Avenge the Great Troubles"
  X_CRI_mission_16_desc:0 ""
- X_CRI_mission_17_title:0 "Ravage Poland"
- X_CRI_mission_17_desc:0 ""
  #Mission Tooltips
  X_CRI_mission_3_tt:0 "Event '§YGenoa Cedes Gazaria§!' has happened."
  X_CRI_mission_7_tt:0 "If this mission is completed by having the required relations with §Y[TUR.GetName]§!, you lose half the money."
@@ -394,6 +394,7 @@
  X_CRI_mission_9_tt:0 "Every owned province in the §Y[284.GetRegionName]§! gains §G1§! Base Tax and Base Manpower.\nEvery owned province NOT of §Y[Root.Culture.GetGroupName]§! culture will become §Y[Root.Culture.GetName]§!."
  X_CRI_mission_11_tt:0 "A §Ythird§! of the development in §Y[295.GetName]§! will be taken and randomly distributed amongst provinces owned by §Y[Root.GetName]§!.\n§Y[Root.GetName]§! gains §G+1000§!£icon_manpower£ and §Y20.0§!¤ per 1 development of §Y[295.GetName]§!."
  X_CRI_mission_12_tt:0 " provinces in the §Y[282.GetAreaName]§! area, §Y[1974.GetAreaName]§! area, §Y[283.GetAreaName]§! area, §Y[281.GetAreaName]§! area, §Y[280.GetAreaName]§! area, §Y[290.GetAreaName]§! area, and §Y[289.GetAreaName]§! area owned by §Y[Root.GetName]§! or its Subjects."
+ X_CRI_mission_16_tt:0 " provinces in the §Y[280.GetRegionName]§! region owned by §Y[Root.GetName]§! or its Subjects."
  X_CRI_mission_13_tt:0 "   Owned by the Subject."
  X_CRI_mission_14_tt:0 "   Owned by the Subject."
  X_CRI_mission_15_tt:0 "No §YChristian§! country who is NOT a subject of §Y[Root.GetName]§! in the §YEastern§! technology group owns a province of §lFlatland§! terrain in the §YRuthenia§! region or §YSteppes§! terrain."
